Replace excel library with docjure